--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,12 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 1.5rem;
 }
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+.animate-spinCustom {
+    animation: spin 20s linear infinite;
+}
