--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,3 +196,7 @@ tr:hover {
     @apply px-4 py-3 text-sm;
   }
 }
+
+.hamza{
+  @apply bg-red-500 hover:bg-blue-500 duration-200 rounded-xl p-2 text-teal-700
+}
